editable column style, fixed timezone issue, adding loading icon. got rid of visible to do list.

--- a/src/styles.css
+++ b/src/styles.css
@@ -22,5 +22,10 @@
   table-layout: auto
 }
 
+th.editable {
+  background-color: lightblue;
+  color: darkslategray;
+  font-style: oblique;
+}
 
 
